change pictures in projects

--- a/src/app/shared/home/my-projects/projects/projects/projects.component.html
+++ b/src/app/shared/home/my-projects/projects/projects/projects.component.html
@@ -19,8 +19,10 @@
                     </div>
                     <div>
                         <p>This App is a self-built Pokédex App.
-                            It provides a comprehensive overview of Pokémon with detailed information, intuitive navigation,
-                            and a clean user interface, all developed independently to showcase strong problem-solving skills,
+                            It provides a comprehensive overview of Pokémon with detailed information, intuitive
+                            navigation,
+                            and a clean user interface, all developed independently to showcase strong problem-solving
+                            skills,
                             structured data handling, and attention to detail.</p>
                     </div>
                 </div>
@@ -32,7 +34,8 @@
                     <div>
                         <p>My workflow was carefully structured and self-managed.
                             I planned features step by step, broke down complex tasks into manageable parts, and
-                            continuously tested and refined the application to ensure clean code, reliability, and steady progress throughout the project.</p>
+                            continuously tested and refined the application to ensure clean code, reliability, and
+                            steady progress throughout the project.</p>
                     </div>
                 </div>
                 <div class="text-area">
@@ -42,7 +45,9 @@
                     </div>
                     <div>
                         <p>Through this project, I significantly expanded my skill set.
-                            I improved my ability to work independently, deepened my understanding of structured data handling and component-based development, and gained valuable experience in planning, problem-solving, and building scalable applications from scratch.</p>
+                            I improved my ability to work independently, deepened my understanding of structured data
+                            handling and component-based development, and gained valuable experience in planning,
+                            problem-solving, and building scalable applications from scratch.</p>
                     </div>
                 </div>
             </div>
@@ -62,10 +67,10 @@
                 </div>
             </div>
         </ng-container>
-      
+        <!-- Tab 2 -->
         <ng-container *ngIf="activeTab === 2">
             <div class="container-left">
-                
+
                 <div class="text-area">
                     <div class="text-title">
                         <img src="/assets/img/project/ellipse.svg" alt="Ellipse">
@@ -74,8 +79,10 @@
                     </div>
                     <div>
                         <p>This App is a self-built Pokédex App.
-                            It provides a comprehensive overview of Pokémon with detailed information, intuitive navigation,
-                            and a clean user interface, all developed independently to showcase strong problem-solving skills,
+                            It provides a comprehensive overview of Pokémon with detailed information, intuitive
+                            navigation,
+                            and a clean user interface, all developed independently to showcase strong problem-solving
+                            skills,
                             structured data handling, and attention to detail.</p>
                     </div>
                 </div>
@@ -87,7 +94,8 @@
                     <div>
                         <p>My workflow was carefully structured and self-managed.
                             I planned features step by step, broke down complex tasks into manageable parts, and
-                            continuously tested and refined the application to ensure clean code, reliability, and steady progress throughout the project.</p>
+                            continuously tested and refined the application to ensure clean code, reliability, and
+                            steady progress throughout the project.</p>
                     </div>
                 </div>
                 <div class="text-area">
@@ -97,7 +105,9 @@
                     </div>
                     <div>
                         <p>Through this project, I significantly expanded my skill set.
-                            I improved my ability to work independently, deepened my understanding of structured data handling and component-based development, and gained valuable experience in planning, problem-solving, and building scalable applications from scratch.</p>
+                            I improved my ability to work independently, deepened my understanding of structured data
+                            handling and component-based development, and gained valuable experience in planning,
+                            problem-solving, and building scalable applications from scratch.</p>
                     </div>
                 </div>
             </div>
@@ -109,10 +119,10 @@
                         <img src="/assets/img/project/css-icon.svg" alt="Css Icon">
                         <img src="/assets/img/project/javascript-icon.svg" alt="Javascript Icon">
                     </div>
-                    <img class="screen" src="/assets/img/project/pokedex-screen.JPG" alt="Pokedex Screen">
+                    <img class="screen-cover" src="/assets/img/project/el-pollp-loco-screen.png" alt="El Pollp Loco Screen">
                     <div class="button-box">
                         <a href="https://pokedex-1337.netlify.app/" target="_blank">Live Test</a>
-                        <a href="https://github.com/eisyeic/Pokedex.git" target="_blank">GitHub</a>
+                        <a href="https://github.com/eisyeic/El-Pollo-Loco.git" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -125,13 +135,11 @@
                     <div class="text-title">
                         <img src="/assets/img/project/ellipse.svg" alt="Ellipse">
                         <h5>About the project</h5>
-                        <span>Duration: 1 weeks</span>
+                        <span>Duration: 5 weeks</span>
                     </div>
                     <div>
-                        <p>This App is a self-built Pokédex App.
-                            It provides a comprehensive overview of Pokémon with detailed information, intuitive navigation,
-                            and a clean user interface, all developed independently to showcase strong problem-solving skills,
-                            structured data handling, and attention to detail.</p>
+                        <p>A simple Jump-and-Run game based on an object-oriented approach. Help Pepe to find coins and
+                            poison bottles to fight against the chicken.</p>
                     </div>
                 </div>
                 <div class="text-area">
@@ -140,19 +148,18 @@
                         <h5>How I have organised my work process</h5>
                     </div>
                     <div>
-                        <p>My workflow was carefully structured and self-managed.
-                            I planned features step by step, broke down complex tasks into manageable parts, and
-                            continuously tested and refined the application to ensure clean code, reliability, and steady progress throughout the project.</p>
+                        <p>How do you keep your code clean and maintainable? Have you broken the project down into
+                            reusable modules or components? Focus on documentation, naming files, variables, classes and
+                            testing.</p>
                     </div>
                 </div>
                 <div class="text-area">
                     <div class="text-title">
                         <img src="/assets/img/project/ellipse.svg" alt="Ellipse">
-                        <h5>What I have learned</h5>
+                        <h5>What I have learnt</h5>
                     </div>
                     <div>
-                        <p>Through this project, I significantly expanded my skill set.
-                            I improved my ability to work independently, deepened my understanding of structured data handling and component-based development, and gained valuable experience in planning, problem-solving, and building scalable applications from scratch.</p>
+                        <p>How many people were in the team </p>
                     </div>
                 </div>
             </div>
@@ -164,10 +171,10 @@
                         <img src="/assets/img/project/css-icon.svg" alt="Css Icon">
                         <img src="/assets/img/project/javascript-icon.svg" alt="Javascript Icon">
                     </div>
-                    <img class="screen" src="/assets/img/project/pokedex-screen.JPG" alt="Pokedex Screen">
+                    <img class="screen-cover" src="/assets/img/project/join-screen.JPG" alt="Join Screen">
                     <div class="button-box">
                         <a href="https://pokedex-1337.netlify.app/" target="_blank">Live Test</a>
-                        <a href="https://github.com/eisyeic/Pokedex.git" target="_blank">GitHub</a>
+                        <a href="https://github.com/eisyeic/Join.git" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -175,42 +182,25 @@
         <!-- Tab 4 -->
         <ng-container *ngIf="activeTab === 4">
             <div class="container-left">
-                <!-- Gleicher Aufbau, Content für Tab 4 einfügen -->
+
                 <div class="text-area">
                     <div class="text-title">
                         <img src="/assets/img/project/ellipse.svg" alt="Ellipse">
                         <h5>About the project</h5>
-                        <span>Duration: 1 weeks</span>
+                        <span>Duration: 3 weeks</span>
                     </div>
                     <div>
-                        <p>This App is a self-built Pokédex App.
-                            It provides a comprehensive overview of Pokémon with detailed information, intuitive navigation,
-                            and a clean user interface, all developed independently to showcase strong problem-solving skills,
-                            structured data handling, and attention to detail.</p>
+                        <p>This App is a Slack Clone App. It revolutionizes team communication and collaboration with
+                            its intuitive interface, real-time messaging and robust channel organization.</p>
                     </div>
                 </div>
-                <div class="text-area">
-                    <div class="text-title">
-                        <img src="/assets/img/project/ellipse.svg" alt="Ellipse">
-                        <h5>How I have organised my work process</h5>
-                    </div>
-                    <div>
-                        <p>My workflow was carefully structured and self-managed.
-                            I planned features step by step, broke down complex tasks into manageable parts, and
-                            continuously tested and refined the application to ensure clean code, reliability, and steady progress throughout the project.</p>
-                    </div>
-                </div>
-                <div class="text-area">
-                    <div class="text-title">
-                        <img src="/assets/img/project/ellipse.svg" alt="Ellipse">
-                        <h5>What I have learned</h5>
-                    </div>
-                    <div>
-                        <p>Through this project, I significantly expanded my skill set.
-                            I improved my ability to work independently, deepened my understanding of structured data handling and component-based development, and gained valuable experience in planning, problem-solving, and building scalable applications from scratch.</p>
-                    </div>
+
+                <div>
+                    <p>How many people were in the team and what was your role? Describe your tasks in 1-2
+                        sentences. It is nice to mention a good teamwork and cooperation.</p>
                 </div>
             </div>
+
             <div class="container-right">
                 <div class="picture-area">
                     <span>Technologies</span>
@@ -219,10 +209,8 @@
                         <img src="/assets/img/project/css-icon.svg" alt="Css Icon">
                         <img src="/assets/img/project/javascript-icon.svg" alt="Javascript Icon">
                     </div>
-                    <img class="screen" src="/assets/img/project/pokedex-screen.JPG" alt="Pokedex Screen">
-                    <div class="button-box">
-                        <a href="https://pokedex-1337.netlify.app/" target="_blank">Live Test</a>
-                        <a href="https://github.com/eisyeic/Pokedex.git" target="_blank">GitHub</a>
+                    <div class="white-screen">
+                        <h5>Cooming soon ...</h5>
                     </div>
                 </div>
             </div>
