--- a/src/app/shared/home/my-projects/projects/projects/projects.component.scss
+++ b/src/app/shared/home/my-projects/projects/projects/projects.component.scss
@@ -53,6 +53,7 @@
     padding-right: 100px;
     padding-top: 20px;
     padding-bottom: 35px;
+    width: 100%;
 }
 
 .container-left {
@@ -83,6 +84,7 @@
 
     p {
         margin: 0px;
+        padding-left: 50px;
     }
 
     img {
@@ -141,22 +143,24 @@
     width: 460px;
     height: 320px;
     border-radius: 25px;
-    object-position: left top;
+    object-position: right top left;
+
 }
 
 .white-screen {
-     width: 460px;
+    width: 460px;
     height: 320px;
     border-radius: 25px;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 70px;
 
-        h5 {
-            font-size: 26px;
-            color: rgb(137, 187, 217);
-        }
+    h5 {
+        font-size: 26px;
+        color: rgb(137, 187, 217);
+    }
 }
 
 .button-box {
